tests/compiler/jsxMissingClosingElementName/index.tsx
<something></>
//~^ ERROR: Identifier expected.
//~| ERROR: Expected corresponding JSX closing tag for 'something'.